--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -1,10 +1,11 @@
 .header-bar {
+  display: block;
   background: #fff;
 }
 
-.header-bar h1 {
+.header-bar h2 {
   text-align: left;
-  padding: 0.2em 1em;
+  padding: 0.3em 1em;
   color: #f65153;
 }
 
