--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .header-bar h2 {
@@ -12,15 +13,6 @@
   text-align: center;
   padding: 0.3em 1em;
   color: #f65153;
-}
-
-.header-bar a {
-  float: right;
-  display: block;
-  text-align: center;
-  padding: 0.5em 2em;
-  text-decoration: none;
-  font-size: 1.2em;
 }
 
 /* btn-logout {} */
