--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -1,3 +1,33 @@
+.btn:hover {
+  background: #2d425f;
+}
+
+.register-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #2d425f;
+}
+
+.register-link:hover {
+  color: #f65153;
+  transition: 0.3s;
+}
+
+a.login {
+  display: inline-block;
+  background: #b8bfc6;
+  color: white;
+  text-decoration: none;
+  padding: 1em 2em;
+  margin: 2em;
+  border: 1px solid #fff;
+}
+
+a.login:hover {
+  background: #7c9fc2;
+  transition: 1s;
+}
+
 .bg {
   position: relative;
   width: 100%;
@@ -27,7 +57,7 @@
   bottom: 0;
   width: 100%;
   height: 100vh;
-  z-index: 2;
+  z-index: -1;
   background: rgba(255, 255, 255, 0)
     linear-gradient(
       to bottom,
@@ -101,7 +131,7 @@
     left: 50%;
     height: 30%;
     width: 50%;
-    margin: -25% 0 0 -25%;
+    margin: -35% 0 0 -25%;
   }
 }
 
@@ -136,7 +166,7 @@
     bottom: 0;
     width: 100%;
     height: 100vh;
-    z-index: 2;
+    z-index: -1;
     background: rgba(255, 255, 255, 0)
       linear-gradient(
         to bottom,
@@ -209,6 +239,6 @@
     left: 50%;
     height: 30%;
     width: 50%;
-    margin: -15% 0 0 -25%;
+    margin: -25% 0 0 -25%;
   }
 }
