--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -1,16 +1,4 @@
 .dashboard {
-  
-  /* box-sizing: border-box;
-  width: 200px;
-  height: 250px;
-  border-radius: 25px; */
-  /* background-color: #f65153; */
-  /* color: #fff; */
-  /* margin: auto; */
-  /* text-align: center;
-  padding-top: 45px; */
-  /* margin-bottom: 1.5em; */
-
   width: 250px;
   height: 250px;
   position: absolute;
@@ -33,11 +21,16 @@
   margin: 0 auto;
   text-align: center;
   padding: 0;
+  background-color: #f5b2ab;
 }
 
 .feedback {
   color: white;
   font-weight: 900;
   font-size: 1.5em;
+  padding: 0;
+  margin-top: 1em;
+  background-color: #2d425f;
+  color: white;
 }
 
