--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -43,6 +43,7 @@ a.login:hover {
   transition: 0.51s;
 }
 
+
 a.register {
   display: inline-block;
   background: #a9bdce;
@@ -127,6 +128,20 @@ a.register:hover {
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+
+.desc p {
+  margin: 0 5em;
+  padding: 2em 2em;
+  background-color: #2d425f;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.Amgi {
+  color: #f65153;
+  font-weight: thin;
+  font-size: 1.3em;
 }
 
 .welcome {
