--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,6 +1,6 @@
 .card {
   box-sizing: border-box;
-  width: 250px;
+  width: 300px;
   height: 230px;
   border-radius: 25px;
   background-color: #fff;
@@ -13,7 +13,7 @@
   max-width:100%;
   max-height:100%;
   top:0; bottom:0;
-  margin:1.5em 0 1.5em 0;
+  margin:1.5em auto;
 }
 
 .question {
