--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -74,8 +74,8 @@ a.register:hover {
   height: 100vh;
   max-height: 100%;
   margin: 0;
-  padding: 0;
-  background: url('../img/abstract-art-blur-544917.jpg');
+  padding: 0; 
+  background: url('../img/abstract-art-blur.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -187,7 +187,7 @@ a.register:hover {
     max-height: 100%;
     margin: 0;
     padding: 0;
-    background: url('../img/abstract-art-blur-544917.jpg');
+    background: url('../img/abstract-art-blur.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
